mirror_lang/test/invalid/incorrect_condition.mirror
(SET $x = 10 TES)

(IF $x > 
    (LOG "Incorrect condition" GOL)
FI)